--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./AIR.jpg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://cdn-icons-png.flaticon.com/512/2111/2111320.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AirBnb</title>
   </head>
